--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
         
           <li class="list-no-style flex-cards">
            
-            <a href="">
+            <a href="" class="flex-hover">
               <div class="flex-style">
                 <img src="./Images/portfolio_card1.jpg" alt="Ноутбук с тремя фотографиями людей" />
                 <div class="text-action">
