--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="header">
+    <header class="header header-index">
       <div class="container all-container">
         <nav class="navigation">
           <a href="" class="logo link">
@@ -78,6 +78,13 @@
             <button type="button" class="modal-open-btn">
               Заказать услугу
             </button>
+            <div class="backdrop is-hidden">
+              <div class="modal">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perspiciatis recusandae delectus ab excepturi laudantium commodi non amet quidem 
+                  nesciunt incidunt dolor sint, libero repellendus veritatis, accusantium deserunt aliquid tenetur.</p>
+              <button>Закрыть</button>
+                </div>
+            </div>
           </div>
         </div>
       </section>
