--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           >
           <ul class="list-no-style">
             <li class="list-margin-style">
-              <a class="link link-color link-padding" href="./index.html">Студия</a>
+              <a class="link link-color link-padding link-underline" href="./index.html">Студия</a>
              
             </li>
             <li class="list-margin-style">
@@ -39,7 +39,7 @@
               >
             </li>
             <li class="list-margin-style">
-              <a class="a-font-color-dark link link-padding" href="">Контакты</a>
+              <a class="a-font-color-dark link link-padding " href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -167,21 +167,27 @@
               />
               <div class="project-titles"> <p class="">десктопные приложения</p></div>
             </li>
-            <li class="item">
+            <li class="item project-style">
               <img
                 src="./Images/demonstration2.jpg"
                 alt="Ноутбук на столе"
                 width="381"
                 title="Ноутбук стоит на столе"
               />
+              <div class="project-titles ">
+                <p class="">Мобильные приложения</p>
+              </div>
             </li>
-            <li class="item">
+            <li class="item project-style">
               <img
                 src="./Images/demonstration3.jpg"
                 alt="Планшет в руках"
                 width="381"
                 title="Планшет в руках"
               />
+              <div class="project-titles">
+                <p class="">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
