--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <a href="" class="logo link"> <span class="accent">Web</span>Studio</a>
         <ul class="list-no-style">
           <li class="list-margin-style"><a class="a-font-color-dark link link-padding" href="./index.html">Студия</a></li>
-          <li class="list-margin-style"><a class="link-color link link-padding" href="./portfolio.html"
+          <li class="list-margin-style"><a class="link-color link link-padding link-underline" href="./portfolio.html"
               target="_blank">Портфолио</a></li>
           <li class="list-margin-style"><a class="a-font-color-dark link link-padding" href="">Контакты</a></li>
         </ul>
@@ -31,7 +31,7 @@
       <ul class="list-no-style-address contacts-hover">
         <li class="email">
           <a class="a-font-color-light link email-icon link-padding" href="mailto:info@devstudio.com">
-            <svg width="" height="" class="email-hover">
+            <svg  class="email-hover">
               <use href="./Images/symbol-defs.svg#icon-email"></use>
             </svg>
             info@devstudio.com</a>
