--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
             </button>
             <div class="backdrop is-hidden">
               <div class="modal">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perspiciatis recusandae delectus ab excepturi laudantium commodi non amet quidem 
-                  nesciunt incidunt dolor sint, libero repellendus veritatis, accusantium deserunt aliquid tenetur.</p>
-              <button>Закрыть</button>
+                <p>Hello World! Hello World! Hello World!</p>
+              <button class="btn-close">
+                <svg width="11px" height="11px">
+                  <use href="./Images/symbol-defs.svg#icon-close"></use>
+                </svg>
+              </button>
                 </div>
             </div>
           </div>
