--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
             </div>
-              <div class="cards-style"><h2>Технокряк</h2>
+              <div class="cards-style overflow-hover"><h2>Технокряк</h2>
               <p>Веб-сайт</p></div>
             </a>
          
