Исправления по ДЗ 5

--- a/index.html
+++ b/index.html
@@ -216,21 +216,21 @@
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
                 <ul class="div-social list-no-style">
-                <li>
+                <li class="margin-social">
                   <a href="" class="social">
                   <svg width="20px" height="20px"  class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#instagram"></use>
                   </svg>
                 </a>
                 </li>
-                <li>
+                <li class="margin-social">
                 <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#twitter"></use>
                   </svg>
                 </a>
                 </li>
-                <li>
+                <li class="margin-social">
                 <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#facebook"></use>
@@ -259,13 +259,13 @@
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
                 <ul class="div-social list-no-style">
-                <li><a href="" class="social social-one">
+                <li class="margin-social"><a href="" class="social social-one">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#instagram"></use>
                   </svg>
                 </a>
                 </li>
-                <li>
+                <li class="margin-social">
                   
                 <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
@@ -273,7 +273,7 @@
                   </svg>
                 </a>
                 </li>
-                <li>
+                <li class="margin-social">
                 <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#facebook"></use>
@@ -302,20 +302,20 @@
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
                 <ul class="div-social list-no-style">
-                  <li>
+                  <li class="margin-social">
                 <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#instagram"></use>
                   </svg>
                 </a>
                 </li>
-               <li> <a href="" class="social">
+               <li class="margin-social"> <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#twitter"></use>
                   </svg>
                 </a>
                 </li>
-                <li>
+                <li class="margin-social">
                 <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#facebook"></use>
@@ -344,19 +344,19 @@
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
                 <ul class="div-social list-no-style">
-                <li><a href="" class="social social-one">
+                <li class="margin-social"><a href="" class="social social-one">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#instagram"></use>
                   </svg>
                 </a>
                 </li>
-               <li> <a href="" class="social">
+               <li class="margin-social"> <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#twitter"></use>
                   </svg>
                 </a>
                 </li>
-                <li>
+                <li class="margin-social">
                 <a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#facebook"></use>
