Чистит код от неиспользуемых классов

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="header header-index">
+    <header class="header">
       <div class="container all-container">
         <nav class="navigation">
           <a href="" class="logo link">
@@ -72,7 +72,7 @@
       <!-- Герой -->
 
       <section class="hero">
-        <div class="all-container hero-padding">
+        <div class="all-container">
           <div class="hero-top">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="modal-open-btn" data-modal-open>
@@ -99,7 +99,7 @@
       <section class="advantages-padding">
         <div class="all-container">
           <h2 hidden>Наши преимущества</h2>
-          <ul class="list-no-style advantages-ul">
+          <ul class="list-no-style">
             
             <li class="advantages-li">
               <div class="icons-adv">
@@ -259,7 +259,7 @@
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
                 <ul class="div-social list-no-style">
-                <li class="margin-social"><a href="" class="social social-one">
+                <li class="margin-social"><a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#instagram"></use>
                   </svg>
@@ -344,7 +344,7 @@
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
                 <ul class="div-social list-no-style">
-                <li class="margin-social"><a href="" class="social social-one">
+                <li class="margin-social"><a href="" class="social">
                   <svg width="20px" height="20px" class="social-logo-style">
                     <use href="./Images/symbol-defs.svg#instagram"></use>
                   </svg>
@@ -386,7 +386,7 @@
           <ul class="list-no-style button-icon">
             <li>
               <a href="" class="button-icon">
-                <svg width="49px" height="49px"  class="clients-logo-style" >
+                <svg width="49px" height="49px"  class="clients-logo-style">
                   <use href="./Images/symbol-defs.svg#.iconlogo_1"></use>
                 </svg>
               </a>
